# alembic-poc

./: .gitignore  README.md  pyproject.toml  todos.db
alembic/: env.py
alembic/versions/: 1cc7e3052c33_category_field_added_in_todo_models_.py  6104fa8af850_merge_category_field_from_main_and_is_.py  9764d300a621_label_field_added_in_todo_models_from_.py  b10765999031_add_due_date_to_todo.py  ca6618db2b36_is_deleted_field_added_in_todo_models.py  d83f8a7300b3_category_field_added_in_todo_models.py  eb57c4b33033_merge_add_description_and_add_category_.py  eed2a9e827f0_initial_migration.py  f5435a488ff2_add_description_in_todo_model.py  f903e548ec9d_add_priority_in_todo_model.py
app/: crud.py  database.py  main.py  models.py  seed.py
