[project]
name = "alembic-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "db-sqlite3>=0.0.1",
    "fastapi[standard]>=0.115.12",
    "pydantic>=2.11.3",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.0",
]
